2010-05-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: ([-parser:foundCharacters:]) don't trim
	the supplied string ... we need to retain whitespace around entities
	in value test.  If inside a <string> element, treat ignorable
	whitespace as normal whitespace.
	* Source/NSXMLParser.m: Add support for ignorable whitespace so that
	it doesn't get handed to the delegate as normal characters.

2010-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObjCRuntime.h:
	Remove include of stdint.h ... already included by GSConfig.h
	* Source/ObjectiveC2/runtime.h:
	Revert 'guarding' of stdint.h inclusion to get things to compile
	again ... we *require* stdint.h to be present.
	I guess on any system old enough not to have it, the solution
	would be to generate and install our own version.

2010-05-21 Riccardo Mottola <rmottola@users.sf.net>

	* Source/ObjectiveC2/runtime.h:
	correctly import config.h

2010-05-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSMime.h: Expose xml charset method.
	* Source/NSXMLParser.m: Determine correct charset when parsing.

2010-05-21 Riccardo Mottola <rmottola@users.sf.net>

	* Source/inet_pton.c
	Source/ObjectiveC2/runtime.h
	Headers/Foundation/NSObjCRuntime.h:
	Guarded stdint.h inclusion.

2010-05-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: GSObjCMethodNames() fix for
	bug #29910

2010-05-10  Adam Fedor  <fedor@gnu.org>

	* Fix typos, clarify unstable release documentation

2010-05-08  Adam Fedor  <fedor@gnu.org>

	* Unstable Version 1.21.0

2010-05-08  Adam Fedor  <fedor@gnu.org>

	* Version 1.20.0

2010-05-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Limit config files to containing a thousand entries
	for safety/security.

2010-05-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m:
	* Source/NSURLProtocol.m:
	Fix for bug #29764 ... add percent escapes to the path when generating